removed the script menu window The script menu tab window was covering the right hand menu even when the tab was not active So I made the window of the script meny tab (script\ menu.right_tab_content) 0x0 Now it no longer interferes with the other tabs

--- a/script_menu_widget/static/scriptmenu/css/style.css
+++ b/script_menu_widget/static/scriptmenu/css/style.css
@@ -1,3 +1,12 @@
+/* Add this at the beginning of your CSS file */
+#scripts\ menu.right_tab_content {
+    height: 0;
+    width: 0;
+    overflow: hidden;
+    position: absolute;
+}
+
+
 #scripts-menu {
     font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
     color: hsl(210, 20%, 80%);
